new proj/src/objects/GE_MDM_Integration_Activity_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Specify the API Names of the Integration Activity custom object and its fields.  All inbound and outbound Integration Activities between SFDC and MDM get logged in this object.</description>
    <fields>
        <fullName>Account_Lookup_API_Name__c</fullName>
        <label>Account Lookup API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Flow_API_Name__c</fullName>
        <label>Data Flow API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_API_Name__c</fullName>
        <label>Description API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_API_Name__c</fullName>
        <label>Source API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_API_Name__c</fullName>
        <label>Status API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By_API_Name__c</fullName>
        <label>Submitted By API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_On_API_Name__c</fullName>
        <label>Submitted On API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_API_Name__c</fullName>
        <label>Target API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GE MDM - Integration Activity Settings</label>
</CustomObject>